[2/2] Settings: Add option to scramble PIN layout when unlocking
Change-Id: I3e2c200a0a31d3c765831bc30280029a50c88051

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -111,4 +111,8 @@
     <string name="system_theme_style_light">Light style</string>
     <string name="system_theme_style_dark">Dark style</string>
     <string name="theme_confirmation">Theme Applied!</string>
+
+    <!-- Scramble PIN layout when unlocking -->
+    <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
 </resources>
