--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -55,4 +55,6 @@
     <!-- Encryption and credential -->
     <string name="custom_encryption_and_credential_settings_summary_on">Device is encrypted</string>
     <string name="custom_encryption_and_credential_settings_summary_off">Device is decrypted</string>
+
+    <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
 </resources>
