--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -57,4 +57,6 @@
     <string name="custom_encryption_and_credential_settings_summary_off">Device is decrypted</string>
 
     <string name="select_sim_for_sms">Select a SIM for SMS</string>
+
+    <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
 </resources>
