[2/2] Keyguard: Forward port lockscreen quick unlock
Change-Id: I3a4cde7edd3953e6f9bf12de687ba34331db4312
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -101,4 +101,8 @@
     <!-- OTA -->
     <string name="nosupdate_settings_title">Updates</string>
     <string name="nosupdate_settings_summary">Find new updates</string>
+
+    <!-- Quick unlock -->
+    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
+    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
 </resources>
