Setting: Add Omni toplevel fragment
Change-Id: I97a4de95be46f453015635e32a56f9fc545de423

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -149,7 +149,7 @@
     </declare-styleable>
 
     <declare-styleable name="TintablePreference">
-        <attr name="android:tint" format="color|reference" />
+        <attr name="preferenceTint" format="color|reference"/>
     </declare-styleable>
 
     <!-- For UsageView -->
