--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -18,12 +18,12 @@
 */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="twilight_mode_location_dialog">Location disabled</string>
+    <string name="twilight_mode_location_disabled">Location access is disabled</string>
+    <string name="twilight_mode_location_enable">Enable</string>
     <string name="interface_style_title">Style</string>
     <string name="header_category_omni">OmniGears</string>
     <string name="omni_dashboard_summary">Omnify your device</string>
     <string name="style_settings_summary">Wallpapers and other swag</string>
-
-    <string name="twilight_mode_location_dialog">Location disabled</string>
-    <string name="twilight_mode_location_disabled">Location access is disabled</string>
-    <string name="twilight_mode_location_enable">Enable</string>
+    <string name="omni_device_parts">Device features</string>
 </resources>
