[2/3] Settings: OmniSwitch integration bits
Change-Id: If962d420bfc0d100c1bf500f3fe9088d22c0677d

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -27,4 +27,5 @@
     <string name="style_settings_summary">Wallpapers and other swag</string>
     <string name="omni_device_parts">Device features</string>
     <string name="bars_settings_title">Bars</string>
+    <string name="button_settings_title">Buttons</string>
 </resources>
