--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -123,4 +123,8 @@
     <string name="sub_activate_failed">Activation failed.</string>
     <string name="sub_deactivate_success">SIM deactivated.</string>
     <string name="sub_deactivate_failed">Deactivation failed.</string>
+
+    <!-- OTA -->
+    <string name="nosupdate_settings_title">Updates</string>
+    <string name="nosupdate_settings_summary">Find new updates</string>
 </resources>
