--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -28,4 +28,5 @@
     <string name="omni_device_parts">Device features</string>
     <string name="bars_settings_title">Bars</string>
     <string name="button_settings_title">Buttons</string>
+    <string name="more_settings_title">More</string>
 </resources>
