--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -29,4 +29,6 @@
     <string name="bars_settings_title">Bars</string>
     <string name="button_settings_title">Buttons</string>
     <string name="more_settings_title">More</string>
+    <string name="display_rotation_title">Rotation</string>
+    <string name="display_rotation_summary">Configure possible rotation angles</string>
 </resources>
