[2/2] Settings: Poor man battery style tweaks
for now just add hide/show image and or percentage

Change-Id: I9c5f0bdb79aa007ad9cc779bf2b460b2a89ca4db

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -42,4 +42,7 @@
     <string name="app_notifications_info_desc">Tap on one of above channels to configure their light colors and other options</string>
     <string name="value_equals_default">Auto</string>
     <string name="show_light_on_zen_title">Blink during Do Not Disturb</string>
+
+    <string name="battery_image">Battery image</string>
+    <string name="battery_image_description">Show battery image in status bar</string>
 </resources>
