Change encryption preference's summary conditionally
With this change Google added a summary to the encryption preference.

https://github.com/DirtyUnicorns/android_packages_apps_Settings/commit/415ce9a77d44732966fbab641d1ecaa8e8688381#diff-4b7e0e8b78bb0ce070384da41a76825f

The problem is that even if you're not encrypted, it says that your phone is.
Is very misleading to the user that don't bother to enter the actual preference
and want to see if they are. This fixes that.

Change-Id: Iaeaffd340f2e248748f244a947aa71eb8ad4ab94

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -51,4 +51,8 @@
 
     <!-- Local (desktop) backup password menu title [CHAR LIMIT=25] -->
     <string name="local_backup_password_title">Desktop backup password</string>
+
+    <!-- Encryption and credential -->
+    <string name="custom_encryption_and_credential_settings_summary_on">Device is encrypted</string>
+    <string name="custom_encryption_and_credential_settings_summary_off">Device is decrypted</string>
 </resources>
