SimPreferenceDialog: Override teal color
Change-Id: I62e2af6f64b6836f5bfce3db4f1ea2081a667e40

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -45,4 +45,7 @@
 
     <string name="battery_image">Battery image</string>
     <string name="battery_image_description">Show battery image in status bar</string>
+
+    <!-- Pixel color on sim card -->
+    <string name="default_sim_color">Pixel</string>
 </resources>
