suggestion_tile: Expose suggestion_tile_background color
Change-Id: I99fdc94319bf502338959302f3dceb1d7c6930e6
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -16,4 +16,6 @@
 
 <resources>
 	<color name="omni_logo_color">#a1c729</color>
+	<!-- Suggestion/condition colors -->
+	<color name="suggestion_tile_background">@*android:color/white</color>
 </resources>
