--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -60,4 +60,9 @@
     <string name="select_sim_for_sms">Select a SIM for SMS</string>
 
     <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
+
+    <string name="system_theme_style_title">System theme style</string>
+    <string name="system_theme_style_auto">Wallpaper based</string>
+    <string name="system_theme_style_light">Light style</string>
+    <string name="system_theme_style_dark">Dark style</string>
 </resources>
