--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -3,6 +3,7 @@
 /*
 **
 ** Copyright 2007 The Android Open Source Project
+** Copyright 2014 The OmniROM Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -72,5 +73,19 @@
         <item>80</item>
         <item>90</item>
         <item>99</item>
+    </string-array>
+
+    <string-array name="increasing_ring_ramp_up_entries" translatable="false">
+        <item>@string/ramp_up_time_ten</item>
+        <item>@string/ramp_up_time_twenty</item>
+        <item>@string/ramp_up_time_thirty</item>
+        <item>@string/ramp_up_time_sixty</item>
+    </string-array>
+
+    <string-array name="increasing_ring_ramp_up_values" translatable="false">
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>60</item>
     </string-array>
 </resources>
