--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -77,4 +77,12 @@
     <string name="system_theme_style_light">Light style</string>
     <string name="system_theme_style_dark">Dark style</string>
     <string name="theme_confirmation">Theme Applied!</string>
+
+    <string name="increasing_ring_volume_option_title">Increasing ring volume</string>
+    <string name="increasing_ring_ramp_up_title">Ramp-up time to ring volume</string>
+
+    <string name="ramp_up_time_ten">10s</string>
+    <string name="ramp_up_time_twenty">20s</string>
+    <string name="ramp_up_time_thirty">30s</string>
+    <string name="ramp_up_time_sixty">60s</string>
 </resources>
