--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -58,4 +58,12 @@
     <string name="custom_encryption_and_credential_settings_summary_off">Device is decrypted</string>
 
     <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
+
+    <string name="increasing_ring_volume_option_title">Increasing ring volume</string>
+    <string name="increasing_ring_ramp_up_title">Ramp-up time to ring volume</string>
+
+    <string name="ramp_up_time_ten">10s</string>
+    <string name="ramp_up_time_twenty">20s</string>
+    <string name="ramp_up_time_thirty">30s</string>
+    <string name="ramp_up_time_sixty">60s</string>
 </resources>
