--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -91,4 +91,10 @@
 
     <string name="force_safe_media_volume_disabled_title">Disable safe volume check</string>
     <string name="force_safe_media_volume_disabled_summary">Dont limit media volume for headsets</string>
+
+    <string name="force_ambient_for_media_pref_title">Ambient Music Ticker</string>
+    <string name="force_ambient_for_media_off">Disabled</string>
+    <string name="force_ambient_for_media_on">Enabled</string>
+    <string name="force_ambient_for_media_on_forced">Enabled and forced</string>
+    <string name="force_ambient_for_media_on_forced_clean">Enabled and forced minimal</string>
 </resources>
