[2/2] Settings: Configure SystemUI theme
allow to force light or dark or use the wallpaper based
automatic selection

[Kshitij Gupta]
- Add a preference controller so as to adapt code for
  Display Settings
- Refactor some variables. We're theming System, not just
  SystemUI

Change-Id: I40fc1ea4ce6026bb381a30fd4e039a2d10ecfa3a
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -105,4 +105,9 @@
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
     <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
+
+    <string name="system_theme_style_title">System theme style</string>
+    <string name="system_theme_style_auto">Wallpaper based</string>
+    <string name="system_theme_style_light">Light style</string>
+    <string name="system_theme_style_dark">Dark style</string>
 </resources>
