[2/3] Settings: Introduce new OTA
Signed-off-by: YumeMichi <do4suki@gmail.com>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -30,8 +30,8 @@
              android:title="@string/nosupdate_settings_title"
              android:summary="@string/nosupdate_settings_summary">
              <intent android:action="android.intent.action.MAIN"
-                 android:targetPackage="com.nitrogen.ota"
-                 android:targetClass="com.nitrogen.ota.activities.MainActivity" />
+                 android:targetPackage="com.fusionjack.slimota"
+                 android:targetClass="com.fusionjack.slimota.MainActivity" />
          </Preference>
 
         <!-- Device status - launches activity -->
