--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -26,7 +26,7 @@
     <string name="omni_dashboard_summary">Omnify your device</string>
     <string name="style_settings_summary">Wallpapers and other swag</string>
     <string name="omni_device_parts">Device features</string>
-    <string name="bars_settings_title">Bars and lock screen</string>
+    <string name="bars_settings_title">Bars</string>
     <string name="button_settings_title">Buttons</string>
     <string name="more_settings_title">More</string>
     <string name="global_actions_title">Power menu</string>
