--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -118,4 +118,5 @@
 
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
+    <string name="font_picker_progress">Setting font\u2026</string>
 </resources>
